[tool.poetry]
name = "pansharpening"
version = "0.1.0"
description = "Deep learning for pansharpening in remote sensing"
license = "MIT"
authors = ["XavierJiezou <878972272@qq.com>"]
maintainers = []
readme = "README.md"
homepage = "https://XavierJiezou.github.io/Pansharpening"
repository = "https://github.com/XavierJiezou/Pansharpening"
documentation = "https://pansharpening.readthedocs.io"
keywords = ["deep learning", "remote sensing", "pansharpening"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{ include = "src" }]
include = ["CHANGELOG.md"]
exclude = []

[tool.poetry.dependencies]
python = "^3.8.1"
fire = "^0.5.0"
rich = "^13.6.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
torch = { version = "^2.1.0", source = "pytorch-pypi" }
torchvision = { version = "^0.16.0", source = "pytorch-pypi" }
lightning = "^2.0.0"
torchmetrics = "^0.11.4"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
black = "^23.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[[tool.poetry.source]]
name = "pytorch-pypi"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.scripts]
psp = "src.cli:main"
